# Auto-News-Agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  how_to_run.txt  pyproject.toml  roadmap.txt  sample_prompt.txt
.github/workflows/: weekly.yml
campus_profiles/: columbia.json  nyu.json  stanford.json  ucb.json  ucla.json  usc.json  uw.json
src/auto_news_agent/: __init__.py  aggregator.py  cli.py  config.py  gemini_client.py  image_generator.py  pipeline.py  schemas.py
src/auto_news_agent/subagents/: __init__.py  base.py  registry.py
